--- a/site/example.html
+++ b/site/example.html
@@ -16,6 +16,10 @@
   <meta property="og:site_name" content="Superhighway" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
+
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
+
 </head>
 
 <body class="article" id="top">
@@ -24,8 +28,22 @@
       <div>
         <p>‘Welcome to Hogwarts,’ said Professor McGonagall. ‘The start-of-term banquet will begin shortly, but before you take your seats in the Great Hall, you will be sorted into your houses. The Sorting is a very important ceremony because, while you are here, your house will be something like your family within Hogwarts. You will have classes with the rest of your house, sleep in your house.</p>
         <p>‘Welcome to Hogwarts,’ said Professor McGonagall. ‘The start-of-term banquet will begin shortly, but before you take your seats in the Great Hall, you will be sorted into your houses. The Sorting is a very important ceremony because, while you are here, your house will be something like your family within Hogwarts. You will have classes with the rest of your house, sleep in your house.</p>
+
+        <pre><code class="ruby">
+puts "Xyz"
+
+class B 
+  def you
+    'x' << 'y'
+  end
+end
+
+B.new.you
+        </code></pre>
       </div>
     </article>
+
+    <script>hljs.initHighlightingOnLoad();</script>
 </body>
 
 </html>
