--- a/site/example.html
+++ b/site/example.html
@@ -8,10 +8,10 @@
   <meta property="og:description" content="This is an example article." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/1.css" />
+  <link rel="stylesheet" href="https://superhighway.dev/1.css" />
 
   <meta property="og:title" content="Example article" />
-  <meta property="og:image" content="/images/w_1280,e_sharpen:60/kqplzzmpgxgmp4ites80.jpg" />
+  <meta property="og:image" content="https://superhighway.dev/images/w_1280,e_sharpen:60/kqplzzmpgxgmp4ites80.jpg" />
   <meta property="og:url" content="https://superhighway.dev/example" />
   <meta property="og:site_name" content="Superhighway" />
   <meta name="twitter:card" content="summary_large_image" />
