--- a/site/example.html
+++ b/site/example.html
@@ -17,8 +17,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
 
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/vs2015.min.css" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/vs.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
 
 </head>
 
@@ -45,5 +45,9 @@ B.new.you
 
     <script>hljs.initHighlightingOnLoad();</script>
 </body>
+
+<style>
+  code { font-family: menlo }
+</style>
 
 </html>
