--- a/site/example.html
+++ b/site/example.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="This is an example article." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://superhighway.dev/1.css" />
+  <link rel="stylesheet" href="1.css" />
 
   <meta property="og:title" content="Example article" />
   <meta property="og:image" content="https://superhighway.dev/images/w_1280,e_sharpen:60/kqplzzmpgxgmp4ites80.jpg" />
@@ -23,10 +23,20 @@
 </head>
 
 <body class="article" id="top">
+  <div id="bgbar"></div>
+
     <article>
-      <header>Title Goes Here</header>
-      <div>
-        <p>‘Welcome to Hogwarts,’ said Professor McGonagall. ‘The start-of-term banquet will begin shortly, but before you take your seats in the Great Hall, you will be sorted into your houses. The Sorting is a very important ceremony because, while you are here, your house will be something like your family within Hogwarts. You will have classes with the rest of your house, sleep in your house.</p>
+      <header>
+        <div class="sub">x won't believe this..</div>
+        <h1>Running any NPM package in the browser locally</h1>
+        <h2>Subtitle goes here. And it's such a doozy of a story this one, it's totally crazy really.</h2>
+        <p class="byline">by Peter Cooper&nbsp;&nbsp;&nbsp;March 13, 2019</p>
+      </header>
+
+      <div class="content">
+        <p>‘Welcome to Hogwarts,’ said Professor <a href="#">McGonagall.</a> ‘The start-of-term banquet will begin shortly, but before you take your seats in the Great Hall, you will be sorted into your houses. The Sorting is a very important ceremony because, while you are here, your house will be something like your family within Hogwarts. You will have classes with the rest of your house, sleep in your house.</p>
+        <blockquote>hello world</blockquote>
+        <h2>Subheading here</h2>
         <p>‘Welcome to Hogwarts,’ said Professor McGonagall. ‘The start-of-term banquet will begin shortly, but before you take your seats in the Great Hall, you will be sorted into your houses. The Sorting is a very important ceremony because, while you are here, your house will be something like your family within Hogwarts. You will have classes with the rest of your house, sleep in your house.</p>
 
         <pre><code class="ruby">
@@ -43,11 +53,8 @@ B.new.you
       </div>
     </article>
 
-    <script>hljs.initHighlightingOnLoad();</script>
+    <div id="logo"><a href="#">&#9776;&nbsp;&nbsp;<img src="logo.png" height="21" alt="superhighway" /></a></div>
+
 </body>
-
-<style>
-  code { font-family: menlo }
-</style>
-
+<script>hljs.initHighlightingOnLoad();</script>
 </html>
