--- a/site/example.html
+++ b/site/example.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Example article</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/1.css" />
+  <link rel="icon" href="/favicon.png" type="image/png" />
 
+  <!-- Things to change -->
+  <title>Example article</title>
   <meta name="description" content="This is an example article." />
   <meta property="og:description" content="This is an example article." />
-
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="1.css" />
-
   <meta property="og:title" content="Example article" />
   <meta property="og:image" content="https://superhighway.dev/images/w_1280,e_sharpen:60/kqplzzmpgxgmp4ites80.jpg" />
   <meta property="og:url" content="https://superhighway.dev/example" />
-  <meta property="og:site_name" content="Superhighway" />
-  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/vs.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
+  <!-- Things that can stay fixed -->
+  <meta property="og:site_name" content="Superhighway" />
+  <meta name="twitter:card" content="summary_large_image" />
 
+  <!-- Code highlighting stuff -->
+  <link rel="stylesheet" href="/vs.min.css" />
+  <script src="/highlight.min.js"></script>
 </head>
 
 <body class="article" id="top">
