--- a/site/piloting-go.html
+++ b/site/piloting-go.html
@@ -8,10 +8,10 @@
 
   <!-- Things to change -->
   <title>Piloting Go Within Your Company</title>
-  <meta name="description" content="This is an example article." />
-  <meta property="og:description" content="This is an example article." />
-  <meta property="og:title" content="Example article" />
-  <meta property="og:image" content="https://superhighway.dev/images/w_1280,e_sharpen:60/kqplzzmpgxgmp4ites80.jpg" />
+  <meta name="description" content="Three steps for approaching introducing Go at a company." />
+  <meta property="og:description" content="Three steps for approaching introducing Go at a company." />
+  <meta property="og:title" content="Piloting Go Within Your Company" />
+  <meta property="og:image" content="https://superhighway.dev/images/w_1280,e_sharpen:60/qvwrxnzsn4qrguebluix.jpg" />
   <meta property="og:url" content="https://superhighway.dev/piloting-go" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
 
