Added HREF to Golang Weekly logo.

--- a/site/piloting-go.html
+++ b/site/piloting-go.html
@@ -110,7 +110,7 @@
       <hr class="promo_line">
 
       <div class="promo">
-        <img src="https://golangweekly.com/images/gopher-keith-57.png">
+        <a href="https://golangweekly.com" title="Golang Newsletter"><img src="https://golangweekly.com/images/gopher-keith-57.png"></a>
         <div class="promo_copy">
         <h2>Want more Go?</h2>
         <p>Join over 25,000 developers and sign up for Golang Weekly. A free weekly newsletter about the Go programming language.<br><br>→ <a href="https://golangweekly.com" title="Golang Newsletter">golangweekly.com</a></p>
