--- a/site/staticcheck-in-action.html
+++ b/site/staticcheck-in-action.html
@@ -31,7 +31,7 @@
       <header>
         <div class="sub">Bug catching in Go</div>
         <h1>Staticcheck in Action</h1>
-        <h2>An introduction to static analysis tool Staticcheck</h2>
+        <h2>An introduction to the static analysis tool Staticcheck</h2>
         <p class="byline">by <a href="https://github.com/shawnps">Shawn Smith</a>&nbsp;&nbsp;&nbsp;November 7, 2019</p>
       </header>
 
@@ -94,7 +94,6 @@
         </pre>
 
         <p>When running staticcheck on this code, we see the following errors:</p>
-
 
         <pre>
         <code>
