--- a/site/staticcheck-in-action.html
+++ b/site/staticcheck-in-action.html
@@ -521,4 +521,6 @@ service/s3/s3manager/upload.go:366:2: field bufferUploadPool is unused (U1000)</
 
 </body>
 <script>hljs.initHighlightingOnLoad();</script>
+<script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+<noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
 </html>
