--- a/site/piloting-go.html
+++ b/site/piloting-go.html
@@ -125,4 +125,6 @@
 
 </body>
 <script>hljs.initHighlightingOnLoad();</script>
+<script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+<noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
 </html>
