--- a/site/eileen-uchitelle-q-and-a.html
+++ b/site/eileen-uchitelle-q-and-a.html
@@ -33,7 +33,7 @@
 
       <div class="content">
 
-        <img src="https://superhighway.dev/images/v1572528078/lyubxfji50zmctmbtf82.jpg" style="float:left; " />
+        <img src="https://superhighway.dev/images/v1572528078/lyubxfji50zmctmbtf82.jpg" style="float:right; height: 150px; margin: 20px 0px 20px 40px; " />
 
         <p>Eileen Uchitelle is a Staff Software Engineer on the Ruby Architecture Team at GitHub and a member of the Rails Core team. She's an avid contributor to open source focusing on Rails and its dependencies. Eileen is passionate about scalability, performance, and making open source communities more sustainable and welcoming.</p>
 
@@ -60,7 +60,7 @@
         <hr class="article_end">
 
         <div class="author_meta">
-          <img src="https://superhighway.dev/images/v1575475397/urso0i6fotdtreevtp2u.jpg" alt="Glenn Goodrich" >
+          <img src="https://superhighway.dev/images/v1575476433/pefiruwmpukhqeamerd2.jpg" alt="Glenn Goodrich" >
           <div>
           <h4>Written by</h4>
           <h2>Glenn Goodrich <a href="https://twitter.com/ruprict" title="Glenn Goodrich on Twitter"><svg class="twitter" viewBox="0 0 24 24">
@@ -73,10 +73,10 @@
       <hr class="promo_line">
 
       <div class="promo"><!-- Go promo -->
-        <a href="https://golangweekly.com" title="Ruby Newsletter"><img src="https://golangweekly.com/images/gopher-keith-57.png"></a>
+        <a href="https://rubyweekly.com" title="Ruby Newsletter"><img src="https://superhighway.dev/images/v1575476504/okyhcsniubt7qluqutbg.png"></a>
         <div class="promo_copy">
         <h2>Want more Ruby?</h2>
-        <p>Join over 40,000 developers and sign up for Ruby Weekly. A free weekly newsletter about the Ruby programming language.<br><br>→ <a href="https://golangweekly.com" title="Golang Newsletter">rubyweekly.com</a></p>
+        <p>Join over 40,000 developers and sign up for Ruby Weekly. A free weekly newsletter about the Ruby programming language.<br><br>→ <a href="https://rubyweekly.com" title="Ruby Newsletter">rubyweekly.com</a></p>
         </div>
       </div><!-- End of Promo div -->
 
