Minor edit to Frontend 2019 roundup article.

--- a/site/frontend-2019.html
+++ b/site/frontend-2019.html
@@ -33,8 +33,6 @@
 
       <div class="content">
 
-        <img src="https://superhighway.dev/images/v1572528078/lyubxfji50zmctmbtf82.jpg" style="float:right; height: 150px; margin: 20px 0px 20px 40px; " />
-
         <p>Each year I try and bring together the highlights of the past twelve months, by way of a roundup post. For 2019</p>
 
         <h1>The Frontend highlights of 2019</h1>
@@ -49,7 +47,7 @@
 
         <p><strong><a href="https://dev.to/emmawedekind/10-html-element-you-didnt-know-you-needed-3jo4">10 HTML Elements You Didn't Know You Needed</a></strong></p>
 
-        <p>Emma Wedekind took a quick look at a handful of HTML elements you might not have known existed. These include the <code><output></code>, <code><meter></code>, and <code><progress></code> tags to name just a few.</p>
+        <p>Emma Wedekind took a quick look at a handful of HTML elements you might not have known existed. These include the <code>&lt;output&gt;</code>, <code>&lt;meter&gt;</code>, and <code>&lt;progress&gt;</code> tags to name just a few.</p>
 
         <img src="" alt="W3C approves WebAuthn as the web standard for password-free logins">
 
