Image changes to Frontend 2019 roundup article.

--- a/site/frontend-2019.html
+++ b/site/frontend-2019.html
@@ -24,6 +24,9 @@
 <body class="article" id="top">
 
     <article>
+      <div style="background-color: #369cee; text-align: center">
+        <img src="https://superhighway.dev/images/v1576512163/urbpi3yj22xbq3prsqat.jpg" style="margin: 0 auto; max-width: 90vw" />
+      </div>
       <header>
         <div class="sub">2019 Roundups</div>
         <h1>The top Frontend links of 2019 🚀</h1>
@@ -78,7 +81,7 @@
       <hr class="promo_line">
 
       <div class="promo"><!-- Promo -->
-        <a href="https://frontendfoc.us" title="Frontend Newsletter"><img src="https://superhighway.dev/images/v1575476504/okyhcsniubt7qluqutbg.png"></a>
+        <a href="https://frontendfoc.us" title="Frontend Newsletter"><img src="https://superhighway.dev/images/v1576513646/mfpklv8vxdri7oq7f1fb.png"></a>
         <div class="promo_copy">
         <h2>Looking to focus on Frontend?</h2>
         <p>Join nearly 90,000 developers and sign up for Frontend Focus. A free weekly newsletter about HTML, CSS, WebGL, browser tech, and more.<br><br>→ <a href="https://frontendfoc.us" title="Frontend Newsletter">frontendfoc.us</a></p>
