--- a/site/frontend-2019.html
+++ b/site/frontend-2019.html
@@ -38,7 +38,7 @@
 
         <h1>The Frontend highlights of 2019</h1>
 
-        <a href="https://frontendmasters.com/books/front-end-handbook/2019/" title="Front-end Developer Handbook 2019"><img src="https://superhighway.dev/images/v1576517417/rnh74nbqzxeuc9qilkgx.png" alt="Front-end Developer Handbook"></a>
+        <a href="https://frontendmasters.com/books/front-end-handbook/2019/" title="Front-end Developer Handbook 2019"><img src="https://superhighway.dev/images/v1576517417/rnh74nbqzxeuc9qilkgx.png" alt="Front-end Developer Handbook" style="width: 100%; height: auto;"></a>
 
         <p><strong><a href="https://frontendmasters.com/books/front-end-handbook/2019/" title="Front-end Developer Handbook 2019">Front-end Developer Handbook 2019</a></strong></p>
 
@@ -46,7 +46,7 @@
 
         <hr class="half_width">
 
-        <img src="" alt="10 HTML Elements You Didn't Know You Needed">
+        <a href="https://dev.to/emmawedekind/10-html-element-you-didnt-know-you-needed-3jo4"><img src="https://superhighway.dev/images/v1576517964/mpilsp0yrhf6xqfzzjcn.jpg" alt="10 HTML Elements You Didn't Know You Needed" style="width: 100%; height: auto;"></a>
 
         <p><strong><a href="https://dev.to/emmawedekind/10-html-element-you-didnt-know-you-needed-3jo4">10 HTML Elements You Didn't Know You Needed</a></strong></p>
 
