--- a/site/frontend-2019.html
+++ b/site/frontend-2019.html
@@ -34,9 +34,11 @@
 
       <div class="content">
 
-        <p>Each year I try and bring together the highlights of the past twelve months, by way of a roundup post. For 2019</p>
+        <p>Each year I bring together the highlights of the past twelve months in the frontend space, whether it be a neat CSS tip, some landmark browser news, or a deep-dive tutorial. This year is no different of course, so consider this the highlight reel of what made an impact in the frontend world in 2019.</p>
 
-        <h1>The Frontend highlights of 2019</h1>
+        <p><em>As a quick aside, the data used to compile this list comes <a href="https://frontendfoc.us" title="Frontend Newsletter">via Frontend Focus</a>, an email newsletter with over 90,000 developers reading it. This list represents some of the most clicked articles of the year.</em></p>
+
+        <h1>The Frontend highlights of 2019:</h1>
 
         <a href="https://frontendmasters.com/books/front-end-handbook/2019/" title="Front-end Developer Handbook 2019"><img src="https://superhighway.dev/images/v1576517417/rnh74nbqzxeuc9qilkgx.png" alt="Front-end Developer Handbook" style="width: 100%; height: auto;"></a>
 
