--- a/site/frontend-2019.html
+++ b/site/frontend-2019.html
@@ -10,7 +10,7 @@
   <title>The top Frontend links of 2019</title>
   <meta name="description" content="Highlights from the past twelve months in the browser, CSS, HTML and web space." />
   <meta property="og:description" content="Highlights from the past twelve months in the browser, CSS, HTML and web space." />
-  <meta property="og:title" content="The top Frontend links of 2019" />
+  <meta property="og:title" content="The top front-end development links of 2019" />
   <meta property="og:image" content="https://superhighway.dev/images/v1576512163/urbpi3yj22xbq3prsqat.jpg" />
   <meta property="og:url" content="https://superhighway.dev/frontend-2019" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
@@ -27,7 +27,7 @@
       <div style="background: url(https://superhighway.dev/images/v1576512163/urbpi3yj22xbq3prsqat.jpg), #369cee; height: 25vw; background-size: cover; background-position: center;"></div>
       <header>
         <div class="sub">Year in Review</div>
-        <h1>The top Frontend links of 2019 🚀</h1>
+        <h1>The Top Frontend Development Links of 2019 🚀</h1>
         <h2>A look back at what proved popular within the frontend community this year.</h2>
         <p class="byline">by <a href="https://twitter.com/chrisbrandrick">Chris Brandrick</a>&nbsp;&nbsp;|&nbsp;&nbsp;December 18, 2019</p>
       </header>
