Go 2019 draft updated. (Zae)

--- a/site/go-2019.html
+++ b/site/go-2019.html
@@ -52,6 +52,8 @@
 
         <hr class="half_width">
 
+        <a href="https://twitter.com/i/web/status/1189631604324327424"><img src="" alt="Go 1.14 Should Be Great" style="width: 100%; height: auto;"></a>
+
         <p>We're still waiting on Go 1.14, but it seems there is plenty of interest in the next major release. This <a href="https://twitter.com/i/web/status/1189631604324327424">tweet thread</a> highlighed what we can expect. A <a href="https://docs.google.com/presentation/d/1HfIwlVTmVWQk94OLKfTGvXpQxyp0U4ywG1u5j2tjiuE/edit#slide=id.g550f852d27_228_0">popular slidedeck from Daniel Martí</a> also ran through some personal picks on what's looking good in the upcoming release.</p>
 
         <hr class="half_width">
