Go draft updated. (Zae)

--- a/site/go-2019.html
+++ b/site/go-2019.html
@@ -36,15 +36,9 @@
 
         <p>It's been another busy year for our favourite Gopher and to close out the year, we've taken a look at the data from the popular <a href="https://golangweekly.com" title="Golang Newsletter">Golang Weekly newsletter</a>.</p>
 
-        <p>The newsletter is read by over 29,000 developers — here's what they clicked on in 2019:</p>
+        <p>The email newsletter is read by over 29,000 developers — here's a look at what they clicked on in 2019:</p>
 
         <h1>The Golang highlights of 2019:</h1>
-
-        <p><strong><a href="https://songlh.github.io/paper/go-study.pdf" title="Understanding Real-World Concurrency Bugs in Go">Understanding Real-World Concurrency Bugs in Go</a></strong></p>
-
-        <p>This report, characterized as the “first systematic study” of its kind, was the most popular link of the year. In it, the authors looked at popular Go applications (<em>think Docker, Kubernetes, etc.</em>), analyzing 171 concurrency bugs, their fixes, and if they are reproducible.</p>
-
-        <hr class="half_width">
 
         <p><strong><a href="https://dave.cheney.net/practical-go/presentations/qcon-china.html">Practical Go: Real World Advice for Writing Maintainable Go Programs</a></strong></p>
 
@@ -52,7 +46,19 @@
 
         <hr class="half_width">
 
-        <a href="https://twitter.com/i/web/status/1189631604324327424"><img src="" alt="Go 1.14 Should Be Great" style="width: 100%; height: auto;"></a>
+        <p><strong><a href="https://songlh.github.io/paper/go-study.pdf" title="Understanding Real-World Concurrency Bugs in Go">Understanding Real-World Concurrency Bugs in Go</a></strong></p>
+
+        <p>This report, characterized as the “first systematic study” of its kind, looks at popular Go applications (<em>think Docker, Kubernetes, etc.</em>), analyzing 171 concurrency bugs, their fixes, and if they are reproducible.</p>
+
+        <hr class="half_width">
+
+        <p><strong><a href="https://www.alexedwards.net/blog/an-overview-of-go-tooling">An Overview of Go's Tooling</a></strong></p>
+
+        <p>Simply calling this an "Overview" seemed a little insufficient. This well-received tome of information detailed how to use Go to do just about everything from linting to rewrite rules to stress testing. Bookmark this one.</p>
+
+        <hr class="half_width">
+
+        <p><strong><a href="https://twitter.com/i/web/status/1189631604324327424">Go 1.14 Should Be Great</a></strong></p>
 
         <p>We're still waiting on Go 1.14, but it seems there is plenty of interest in the next major release. This <a href="https://twitter.com/i/web/status/1189631604324327424">tweet thread</a> highlighed what we can expect. A <a href="https://docs.google.com/presentation/d/1HfIwlVTmVWQk94OLKfTGvXpQxyp0U4ywG1u5j2tjiuE/edit#slide=id.g550f852d27_228_0">popular slidedeck from Daniel Martí</a> also ran through some personal picks on what's looking good in the upcoming release.</p>
 
@@ -64,27 +70,33 @@
 
         <hr class="half_width">
 
-        <p><strong><a href="https://www.alexedwards.net/blog/an-overview-of-go-tooling"></a>An Overview of Go's Tooling</strong>
+        <p><strong><a href="https://github.com/dgryski/go-perfbook">Best Practices for Writing High-Performance Go Code </a></strong></p>
 
-        </p>Simply calling this an "Overview" seemed a little insufficient. This well-received tome of information detailed how to use Go to do just about everything from linting to rewrite rules to stress testing. Bookmark this one.</p>
-
-        <hr class="half_width">
-
-        <p><strong><a href="https://medium.com/statuscode/how-i-write-go-http-services-after-seven-years-37c208122831?">How I Write Go HTTP Services After Seven Years</a></strong></p>
-
-        <p>Amazingly, the most clicked link of 2018 was as simple as a veteran Go developer sharing his expertise and preferences. Congratulations Mat.</p>
+        <p>This document outlines best practices for writing optimized and performant Go code. It's been updated several times over the years and remains a popular resource. It's avaialble in English, Spanish and Chinese.</p>
 
         <hr class="half_width">
 
         <p><strong><a href="https://hackernoon.com/go-is-on-a-trajectory-to-become-the-next-enterprise-programming-language-3b75d70544e">Go is on a Trajectory to Become the Next Enterprise Programming Language</a></strong></p>
 
-        <p>It's quite the headline, but the author makes worthwhile points about many of Go's characteristics that give it an advantage in building large-scale software projects.</p>
+        <p>In this article from May Kevin Goslar makes several worthwhile points about the characteristics that give Go an advantage in building large-scale software projects.</p>
 
         <hr class="half_width">
 
         <p><strong><a href="https://github.com/golang/go/issues/32437#issuecomment-512035919">The Go Team Rejects the try Error Checking Function Proposal</a></strong></p>
 
-        <p>I guess there really is no try. Puns aside, the Go Core Team listened to a lot of feedback from the community and reacted to that feedback. That is pretty cool.</p>
+        <p>Back in July, following a lot of feedback from the wider community the Go Core Team declined a proposal for a <code>try</code> built-in Go error check function due to it "<em>not targeting a worthwhile problem</em>".</p>
+
+        <hr class="half_width">
+
+        <p><strong><a href="https://itnext.io/the-top-10-most-common-mistakes-ive-seen-in-go-projects-4b79d4f6cd65">The Top 10 Most Common Mistakes I’ve Seen in Go Projects</a></strong></p>
+
+        <p>In this blog Teiva Harsanyi listed some of the most common mistakes he sees in Go projects, including problems with benchmarking and pointers, confusion using <code>break</code>, slice initialization, and variable shadowing.</p>
+
+        <hr class="half_width">
+
+        <p><strong><a href="https://stephen.sh/posts/quick-go-performance-improvements">Quick Go Performance Improvements</a></strong></p>
+
+        <p>A popular article with a handful of "<em>techniques you can use to significantly improve the performance of your program with little effort</em>".</p>
 
         <hr class="article_end">
 
