--- a/site/go-2019.html
+++ b/site/go-2019.html
@@ -78,7 +78,7 @@
 
         <p><strong><a href="https://hackernoon.com/go-is-on-a-trajectory-to-become-the-next-enterprise-programming-language-3b75d70544e">Go is on a Trajectory to Become the Next Enterprise Programming Language</a></strong></p>
 
-        <p>In this article from May Kevin Goslar makes several worthwhile points about the characteristics that give Go an advantage in building large-scale software projects.</p>
+        <p>In this article from May, Kevin Goslar makes several worthwhile points about the characteristics that give Go an advantage in building large-scale software projects.</p>
 
         <hr class="half_width">
 
