--- a/site/postgres-2019.html
+++ b/site/postgres-2019.html
@@ -28,7 +28,7 @@
       <header>
         <div class="sub">Year in Review</div>
         <h1>The Top PostgreSQL Links of 2019</h1>
-        <h2>A look back at what proved popular within the Go community this year.</h2>
+        <h2>A look back at what proved popular within the PG community this year.</h2>
         <p class="byline">by <a href="https://medium.com/@zaecooperpress">Za'e Johnson</a>&nbsp;&nbsp;|&nbsp;&nbsp;December 18, 2019</p>
       </header>
 
@@ -88,8 +88,6 @@
 
         <hr class="half_width">
 
-        <a href=""><img src="" alt="" style="width: 100%; height: auto;"></a>
-
         <p><strong><a href="https://news.ycombinator.com/item?id=21040625">Hacker News Discusses.. Postgres or MySQL?</a></strong></p>
 
         <p>This popular discussion on Hacker News from October asked readers to choose between the two technologies. Perhaps unsurprisingly, Postgres seems to be strongly preferred.</p>
@@ -103,7 +101,7 @@
         <hr class="article_end">
 
         <div class="author_meta">
-          <img src="https://superhighway.dev/images/v1576590879/lpr7nxa605wcequeu5mb.jpg" alt="Za'e Johnson" >
+          <img src="https://superhighway.dev/images/v1576679286/oobnfkrja4zimbfo0aow.jpg" alt="Za'e Johnson" >
           <div>
           <h4>Written by</h4>
           <h2>Za'e Johnson</h2>
@@ -114,7 +112,7 @@
       <hr class="promo_line">
 
       <div class="promo">
-        <a href="https://postgresweekly.com" title="PostgreSQL Newsletter"><img src="https://postgresweekly.com/images/Postgres-Keith.pngg"></a>
+        <a href="https://postgresweekly.com" title="PostgreSQL Newsletter"><img src="https://postgresweekly.com/images/Postgres-Keith.png"></a>
         <div class="promo_copy">
         <h2>Want more Postgres?</h2>
         <p>Join over 10,000 developers and sign up for Postgres Weekly. A free weekly newsletter about the PostgreSQL relational database management system.<br><br>→ <a href="https://postgresweekly.com" title="PostgreSQL Newsletter">golangweekly.com</a></p>
