--- a/site/postgres-2019.html
+++ b/site/postgres-2019.html
@@ -115,7 +115,7 @@
         <a href="https://postgresweekly.com" title="PostgreSQL Newsletter"><img src="https://postgresweekly.com/images/Postgres-Keith.png"></a>
         <div class="promo_copy">
         <h2>Want more Postgres?</h2>
-        <p>Join over 10,000 developers and sign up for Postgres Weekly. A free weekly newsletter about the PostgreSQL relational database management system.<br><br>→ <a href="https://postgresweekly.com" title="PostgreSQL Newsletter">golangweekly.com</a></p>
+        <p>Join over 10,000 developers and sign up for Postgres Weekly. A free weekly newsletter about the PostgreSQL relational database management system.<br><br>→ <a href="https://postgresweekly.com" title="PostgreSQL Newsletter">postgresweekly.com</a></p>
         </div>
       </div><!-- End of Promo div -->
 
