--- a/site/postgres-2019.html
+++ b/site/postgres-2019.html
@@ -72,13 +72,13 @@
 
         <p><strong><a href="https://blog.digitalocean.com/some-postgres-best-practices/">A Few Postgres Best Practices</a></strong></p>
 
-        <p>Such as using <code>BIGINT</code> or <code>UUID</code> for primary keys, keeping your credentials rotated, and using connection pooling.</p>
+        <p>Includes tips such as using <code>BIGINT</code> or <code>UUID</code> for primary keys, keeping your credentials rotated, and using connection pooling.</p>
 
         <hr class="half_width">
 
         <p><strong><a href="https://severalnines.com/database-blog/overview-json-capabilities-within-postgresql">An Overview of Postgres' JSON Capabilities</a></strong></p>
 
-        <p>Postgres's JSON capabilities have continued to improve over the years, and while this article was very popular back in January, things have continued to improve over the course of 2019 with the introduction of JSONPath support (PDF) in Postgres 12 (which was released in October).</p>
+        <p>The JSON capabilities of PostgreSQL have continued to improve over the years, and while this article was very popular back in January, things have continued to improve over the course of 2019 with the introduction of JSONPath support (PDF) in Postgres 12 (which was released in October).</p>
 
         <hr class="half_width">
 
