--- a/site/postgres-2019.html
+++ b/site/postgres-2019.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Postgres highlights from the past twelve months." />
   <meta property="og:title" content="The top PostgreSQL links of 2019" />
   <meta property="og:image" content="https://superhighway.dev/images/v1576752103/wmqfzetcuvixcpjn8anf.jpg" />
-  <meta property="og:url" content="https://superhighway.dev/frontend-2019" />
+  <meta property="og:url" content="https://superhighway.dev/postgres-2019" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
 
   <!-- Things that can stay fixed -->
