Node and Go article changes.

--- a/site/go-2019.html
+++ b/site/go-2019.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Golang highlights from the past twelve months." />
   <meta property="og:title" content="The top Go links of 2019" />
   <meta property="og:image" content="https://superhighway.dev/images/v1576594669/skoncp8u1eruim6ypis3.jpg" />
-  <meta property="og:url" content="https://superhighway.dev/frontend-2019" />
+  <meta property="og:url" content="https://superhighway.dev/go-2019" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
 
   <!-- Things that can stay fixed -->
